サムネイル表示を含めて履歴の保存に成功

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -10,8 +10,7 @@
     "electron/**/*.ts",
     "src/main/**/*.ts",
     "src/preload/**/*.ts",
-    "src/shared/**/*.ts",
-    "src/composables/*.ts"
+    "src/shared/**/*.ts"
   ],
   "compilerOptions": {
     "noEmit": true,
