--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -10,10 +10,14 @@
     "electron/**/*.ts",
     "src/main/**/*.ts",
     "src/preload/**/*.ts",
-    "src/shared/**/*.ts"
+    "src/preload.d.ts",
+    "src/shared/**/*.ts",
+    "src/**/*",
+    "src/**/*.vue",
+    "env.d.ts"
   ],
+  "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
-    "noEmit": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "module": "ESNext",
     "moduleResolution": "Bundler",
@@ -21,6 +25,11 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "composite": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
